数据库修正