@@ -8,7 +8,12 @@ group = 'cc.sirrus'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+compileJava {
+    options.compilerArgs.add('--enable-preview')
 }
 
 configurations {
@@ -19,6 +24,8 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://projectlombok.org/edge-releases' }
+    mavenLocal()
 }
 
 dependencies {
@@ -31,7 +38,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
 
     // ! DB
     runtimeOnly 'com.h2database:h2'
@@ -45,7 +51,9 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
 
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
+    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'ch.qos.logback:logback-core:1.4.7'
